# lcd-4-5-digits-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: esp32.rs  stm32f4.rs  stm32f7.rs
src/: backend.rs  frame.rs  lib.rs  segments.rs
